--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,6 +12,10 @@
 			"installDockerComposeSwitch": true,
 			"version": "latest",
 			"dockerDashComposeVersion": "latest"
+		},
+		"ghcr.io/devcontainers/features/node": {
+			"version": "lts",
+			"nvmVersion": "latest"
 		}
 	},
 	"customizations": {
@@ -22,7 +26,8 @@
 			},
 			"extensions": [
 				"davidanson.vscode-markdownlint",
-				"streetsidesoftware.code-spell-checker"
+				"streetsidesoftware.code-spell-checker",
+				"sonarsource.sonarlint-vscode"
 			]
 		}
 	}
