--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,3 +19,10 @@ updates:
       interval: weekly
       day: sunday
     open-pull-requests-limit: 2
+
+  - package-ecosystem: "gomod"
+    directory: "/src/"
+    schedule:
+      interval: weekly
+      day: sunday
+    open-pull-requests-limit: 2
