--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,8 @@ jobs:
 
     - name: Init repository
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: Obtain Go
       uses: actions/setup-go@v4
