--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,10 @@ on:
     branches:
       - main
     paths:
-      - "src/api/**"
+      - "src/**"
   pull_request:
     paths:
-      - "src/api/**"
+      - "src/**"
       - ".github/workflows/ci.yml"
 
 env:
