Fix problem with build step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
       run: go mod tidy
 
     - name: Build API
-      run: go build
+      run: go build ./cmd/main.go
 
     - name: SonarQube Scan
       if: ${{ github.event_name != 'pull_request' }}
