Use the correct project key

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=gamebrary-api
-sonar.projectName=GameBrary API
+sonar.projectKey=jero-dev_gamebrary
+sonar.projectName=gamebrary
 sonar.organization=jero-dev
 
 sonar.projectVersion=0.1
