Change references from SonarQube to SonarCloud (#15)

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,10 @@
-  sonar.projectKey=gamebrary-api
-  sonar.projectName=GameBrary API
+sonar.projectKey=jero-dev_gamebrary
+sonar.projectName=gamebrary
+sonar.organization=jero-dev
 
-  sonar.sources=.
-  sonar.exclusions=**/*_test.go
+sonar.projectVersion=0.1
 
-  sonar.tests=.
-  sonar.test.inclusions=**/*_test.go
+sonar.sources=.
+
+sonar.tests=.
+sonar.test.inclusions=**/*_test.go
