--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,40 +12,33 @@ on:
       - ".github/workflows/ci.yml"
 
 env:
-
-  GO_VERSION: "1.22"
+  GO_VERSION: 1.22
 
 jobs:
-
   build:
-
     name: Build API
 
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: ./src
-
     steps:
 
-    - name: Init repository
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
-    - name: Obtain Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: ${{ env.GO_VERSION }}
-
-    - name: Get dependencies
-      run: go mod tidy
-
-    - name: Build API
-      run: go build ./cmd/main.go
-
-    - name: SonarCloud Scan
+      - name: Init repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
+      - name: Obtain Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+      
+      - name: Build API
+        run: go build -v ./...
+      
+      - name: Test API
+        run: go test ./... -coverprofile=coverage.out
+      
+      - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@v2
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
