--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ on:
       - ".github/workflows/ci.yml"
 
 env:
-  GO_VERSION: 1.22
+  GO_VERSION: "1.22"
 
 jobs:
   build:
@@ -25,22 +25,23 @@ jobs:
         working-directory: ./src
 
     steps:
-      - name: Init repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      
-      - name: Obtain Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ env.GO_VERSION }}
-      
+
+    - name: Init repository
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+
+    - name: Obtain Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: ${{ env.GO_VERSION }}
+
       - name: Build API
         run: go build -v ./...
-      
+
       - name: Test API
         run: go test ./... -coverprofile=coverage.out
-      
+
       - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@v2
       env:
